# mcp-server-microfn

./: .gitignore  .rules  CLAUDE.md  MIGRATION_TRACKER.md  README.md  __init__.py  api-generated.md  api_client.py  biome.json  config.py  justfile  my_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  setup.py  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
.zed/: settings.json
my-mcp-server/: CLAUDE.md  README.md  package-lock.json  package.json  wrangler.jsonc
my-mcp-server/src/: index.ts  microfnApiClient.ts
my-mcp-server/src/tools/: checkDeployment.ts  createFunction.ts  executeFunction.ts  getFunctionCode.ts  listFunctions.ts  listPackages.ts  packageManagement.ts  renameFunction.ts  secretManagement.ts  (+1 more)
src/: AuthenticatedMCP.ts  StreamableHTTPHandler.ts  UserDataCache.ts  auth0.ts  index.ts  mcpServerFactory.ts  microfnApiClient.ts  types.ts  workspaceCache.ts
src/auth/: errorHandler.ts  index.ts
src/tools/: checkDeployment.ts  createFunction.ts  createSecret.ts  deleteSecret.ts  executeFunction.ts  generateFunction.ts  getFunctionCode.ts  getSecrets.ts  installPackage.ts  listFunctions.ts  listPackages.ts  ping.ts  removePackage.ts  renameFunction.ts  rewriteFunction.ts  updateFunctionCode.ts  updatePackage.ts  updatePackageLayer.ts  utils.ts
src/utils/: jwt.ts
tools/: __init__.py  check_deployment.py  create_function.py  execute_function.py  get_function_code.py  list_functions.py  package_management.py  ping.py  rename_function.py  secret.py  update_function_code.py
