[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-microfn"
version = "0.1.0"
description = "MCP Server for microfn"
readme = "README.md"
authors = [
    {name = "David Mohl", email = "git@d.sh"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx",
    "pydantic-settings",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mcp-server-microfn"
"Bug Tracker" = "https://github.com/yourusername/mcp-server-microfn/issues"

[tool.setuptools]
packages = ["tools"]

[project.scripts]
server = "server:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]
